@@ -22,10 +22,11 @@ has '+widget'              => default => 'Checkbox';
 
 has '+wrapper_class'       => default => 'input-checkbox';
 
-around 'after_build' => sub {
+around 'BUILD' => sub {
    my ($orig, $self) = @_;
 
    $self->add_label_class('label-checkbox');
+   $orig->($self);
    return;
 };
 
